# trend-play-radar

./: .gitignore  README.md  pyproject.toml
cloudflare/google-trends-bridge/: README.md  package-lock.json  package.json  wrangler.toml
cloudflare/google-trends-bridge/src/: index.js  refresh.js
dashboard/: app.js  index.html  styles.css
data/: sample_feed.xml  sample_google_trends.json  sample_signals.json
docs/: architecture.md
output/: latest_report.json  latest_report.md  trend_play_radar.db
src/trend_play_radar/: __main__.py  cli.py  config.py  google_trends_bridge.py  models.py  storage.py
src/trend_play_radar/connectors/: __init__.py  base.py  google_trends.py  json_file.py  mock.py  reddit.py  rss.py  tiktok.py  x_source.py  youtube.py
src/trend_play_radar/pipeline/: cluster.py  collect.py  debug_sources.py  report.py  score.py
tests/: google_trends_bridge_test.py  smoke_test.py  youtube_connector_test.py
